:books: Chore - match with standards
Signed-off-by: Zac Rosenbauer <zac@joggr.io>

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,9 @@
-name: Node.js Package
+name: 'Publish'
 
 on:
   release:
-    types: [created]
-
+    types: [created, published]
+    
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
