:books: Chore - add name
Signed-off-by: Zac Rosenbauer <zac@joggr.io>

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,7 +5,8 @@ on:
     types: [created, published]
     
 jobs:
-  publish-npm:
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
