--- a/package.json
+++ b/package.json
@@ -2,22 +2,30 @@
   "name": "@joggr/tolkien",
   "version": "0.1.0",
   "description": "WIP",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:joggrdocs/tolkien.git",
   "author": "Joggr Team <engineering@joggr.io>",
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint:check": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
+    "type:check": "tsc --noEmit",
+    "prepublish": "tsc"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-config-semistandard": "^17.0.0",
     "jest": "^29.6.1",
+    "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
     "typescript": "^5.1.6"
   }
 }
