--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,13 +21,11 @@ jobs:
           node-version: 18
       - name: Install Packages
         run: npm install
-# @todo add in Linting & Formatting
-#       - name: Format
-#         run: yarn format:check
-#       - name: Lint
-#         run: yarn lint:check
-#       - name: Type Check
-#         run: yarn type:check
+      - name: Format
+        run: npm run format:check
+      - name: Lint
+        run: npm run lint:check
+      - name: Type Check
+        run: npm run type:check
       - name: Test
         run: npm test --ci
-        
