--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@joggr/tolkien",
-  "version": "0.1.0",
-  "description": "WIP",
+  "version": "0.2.0",
+  "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
   "main": "dist/index.js",
   "repository": "git@github.com:joggrdocs/tolkien.git",
   "author": "Joggr Team <engineering@joggr.io>",
