Fix CI: Linting, Fomatting and Tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-  "cSpell.words": [
-    "Flaticon",
-    "Freepik"
-  ],
+  "cSpell.words": ["Flaticon", "Freepik"],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#cdf2e2",
     "activityBar.background": "#cdf2e2",
