--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "type-fest": "^4.10.2",
     "typescript": "^5.1.6"
   }
 }
