--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
+    "removeComments": false,
     "lib": ["ES2022"],
     "outDir": "./dist",
     "baseUrl": ".",
