--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -2,37 +2,37 @@ name: 'Publish to npm'
 
 on:
   release:
-    types: [created, published]
+    types: [published]
 
 jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
-      - name: Use Node.js v20
-        uses: actions/setup-node@v1
-        with:
-          node-version: 20
-          registry-url: 'https://registry.npmjs.org'
-      - name: Check if package.json Version matches tag
-        uses: actions/github-script@v6
-        env:
-          TAG: ${{ github.ref_name }}
+      - name: '🛒 Checkout Code'
+        uses: actions/checkout@v4
+      - name: '✅ Check if package.json Version matches tag'
+        uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs')
             const packageJson = JSON.parse(fs.readFileSync('${{ github.workspace }}/package.json'))
             const pjv = packageJson.version
-            const tv = process.env.TAG.replace('v', '')
+            const tv = "${{ github.ref_name }}".replace('v', '')
 
             if (pjv !== tv) {
               throw new Error(`The tagged release, ${tv}, doesn't match the package.json version, ${pjv}. Please fix the issue, delete the tag & release and try again.`)
             }
-      - name: Install Packages
-        run: npm ci
-      - name: Publish
-        run: npm publish
+      - name: '🟢 Use Node.js'
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: 'https://registry.npmjs.org'
+      - name: '⚡️ Install Packages'
+        run: yarn install
+      - name: '🏗️ Build'
+        run: yarn build
+      - name: '🚢 Publish'
+        run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
