🔥 hotfix: fix types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.8.1",
   "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "build": "tsc",
