--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,10 +1,16 @@
 version: 2
 updates:
-  - package-ecosystem: 'npm'
-    directory: '/'
-    schedule:
-      interval: 'weekly'
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
       interval: 'weekly'
+    labels:
+      - "dep: github-actions"
+      - "type: dependencies"
+  - package-ecosystem: 'npm'
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+    labels:
+      - "dep: npm"
+      - "type: dependencies"
