--- a/.github/workflows/auto-release-notes.yaml
+++ b/.github/workflows/auto-release-notes.yaml
@@ -1,4 +1,4 @@
-name: 'Release Notes (Drafter)'
+name: 'auto: Release Notes Drafter'
 
 on:
   workflow_dispatch: {}
@@ -14,6 +14,6 @@ jobs:
   update_draft_release:
     runs-on: ubuntu-latest
     steps:
-      - uses: toolmantim/release-drafter@v5
+      - uses: toolmantim/release-drafter@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
