--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "@joggr/tempo",
-  "version": "0.9.0",
+  "version": "0.8.3",
   "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "README.md",
+    "package.json",
+    "dist/**/*"
   ],
   "scripts": {
     "test": "jest --coverage",
-    "build": "tsc",
+    "build": "vite build",
     "build:examples": "ts-node examples/index.ts",
     "analyze:lint": "eslint --quiet src/**/*.ts",
     "analyze:fmt": "prettier --check .",
@@ -29,26 +39,33 @@
   },
   "homepage": "https://github.com/joggrdocs/tempo#readme",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.3.0",
     "@joggr/eslint-config": "^1.1.2",
+    "@types/eslint": "^8.56.10",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-filenames-simple": "^0.9.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "type-fest": "^4.15.0",
-    "typescript": "^5.4.5"
+    "type-fest": "^4.18.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.2.2"
 }
