🔥 hotfix: Fix token and username for Bot

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: '🛒 Checkout Code'
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_BOT_TOKEN }}
 
       - name: '🟢 Use Node.js'
         uses: actions/setup-node@v4
@@ -47,8 +49,8 @@ jobs:
       - name: '💾 Commit Incremented Version'
         if: ${{ inputs.version != 'calculate' }}
         run: |
-          git config --local user.email "<>"
-          git config --local user.name "Mr. Release Bot [bot]"
+          git config --local user.email "${{ secrets.GH_BOT_EMAIL }}"
+          git config --local user.name "${{ secrets.GH_BOT_NAME }}"
           git add package.json
           git commit -am "[🤖 release]: ${{ steps.version.outputs.result }} (${{ inputs.version }})"
           git push origin HEAD --force
