chore: upgrade packages, migrate biome, swc, vitest

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,4 +1,4 @@
-'type: dependencies': ['upgrades/*', 'upgrade/*', 'dependencies/*']
+'type: dependencies': ['upgrades/*', 'upgrade/*', 'dependencies/*', 'deps/*']
 'type: enhancement': ['feature/*', 'feat/*', 'enhance/*', 'enhancement/*']
 'type: bugfix': ['bugfix/*']
 'type: hotfix': ['hotfix/*']
