--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,7 +8,9 @@ supportedArchitectures:
   cpu:
     - current
     - x64
+    - x86
     - arm
+    - arm64
     - ia32
   libc:
     - glibc
@@ -19,4 +21,4 @@ supportedArchitectures:
     - linux
     - win32
 
-yarnPath: .yarn/releases/yarn-4.2.2.cjs
+yarnPath: .yarn/releases/yarn-4.4.1.cjs
