--- a/.github/workflows/pkg-npm-publish.yaml
+++ b/.github/workflows/pkg-npm-publish.yaml
@@ -1,4 +1,5 @@
 name: 'pkg: Publish to npm'
+run-name: 'Publish to npm Registry (${{ inputs.version }})'
 
 on:
   workflow_dispatch:
@@ -11,7 +12,6 @@ on:
           - patch
           - minor
           - major
-          - calculate
 
 jobs:
   publish:
@@ -30,13 +30,14 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'yarn'
 
+      - name: '🏗️ Build'
+        run: yarn build
+
       - name: '🔼 Increment Version'
-        if: ${{ inputs.version != 'calculate' }}
         run: yarn version ${{ inputs.version }}
 
       - name: '#️⃣ Get Version'
         uses: actions/github-script@v7
-        if: ${{ inputs.version != 'calculate' }}
         id: version
         with:
           result-encoding: string
@@ -47,7 +48,6 @@ jobs:
             return pj.version;
 
       - name: '💾 Commit Incremented Version'
-        if: ${{ inputs.version != 'calculate' }}
         run: |
           git config --local user.email "${{ secrets.GH_BOT_EMAIL }}"
           git config --local user.name "${{ secrets.GH_BOT_NAME }}"
@@ -57,23 +57,11 @@ jobs:
 
       - name: '📝 Generate Release Notes (user-input)'
         uses: toolmantim/release-drafter@v6
-        if: ${{ inputs.version != 'calculate' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           version: v${{ steps.version.outputs.result }}
           publish: true
-
-      - name: '📝 Generate Release Notes (calculated)'
-        uses: toolmantim/release-drafter@v6
-        if: ${{ inputs.version == 'calculate' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          publish: true
-
-      - name: '🏗️ Build'
-        run: yarn build
 
       - name: Setup .yarnrc.yml
         run: |
