--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,30 @@
 {
-  "cSpell.words": ["Flaticon", "Freepik"],
-  "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#cdf2e2",
-    "activityBar.background": "#cdf2e2",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#b681de",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#cdf2e2",
-    "statusBar.background": "#a4e8ca",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#7bdeb2",
-    "statusBarItem.remoteBackground": "#a4e8ca",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#a4e8ca",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#a4e8ca99",
-    "titleBar.inactiveForeground": "#15202b99"
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
   },
-  "peacock.color": "#a4e8ca"
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
+  },
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.wordWrap": "on",
+  "editor.formatOnSave": true,
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  }
 }
