--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.umd.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/umd/index.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/umd/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
   "files": [
     "README.md",
     "package.json",
     "dist/**/*"
   ],
   "scripts": {
-    "test": "jest --coverage",
-    "build": "vite build",
-    "build:examples": "ts-node examples/index.ts",
-    "analyze:lint": "eslint --quiet src/**/*.ts",
-    "analyze:fmt": "prettier --check .",
+    "test": "vitest --coverage",
+    "build": "yarn build:esm && yarn build:umd && yarn build:types",
+    "build:esm": "swc ./src -d ./dist/esm --strip-leading-paths --delete-dir-on-start -C module.type=es6",
+    "build:umd": "swc ./src -d ./dist/umd --strip-leading-paths --delete-dir-on-start -C module.type=umd",
+    "build:types": "tsc --emitDeclarationOnly --outDir ./dist/types",
+    "generate:examples": "ts-node examples/index.ts",
+    "analyze": "biome check",
+    "analyze:ci": "biome ci --diagnostic-level=error",
     "analyze:types": "tsc --noEmit",
-    "analyze": "yarn analyze:fmt && yarn analyze:lint && yarn analyze:types",
-    "fix:lint": "eslint src/**/*.ts --fix",
-    "fix:fmt": "prettier --write ."
+    "fix": "biome check --fix"
   },
   "repository": {
     "type": "git",
@@ -39,33 +40,16 @@
   },
   "homepage": "https://github.com/joggrdocs/tempo#readme",
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.3.0",
-    "@joggr/eslint-config": "^1.1.2",
-    "@types/eslint": "^9.6.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-semistandard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-filenames-simple": "^0.9.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-n": "^17.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "type-fest": "^4.18.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "@biomejs/biome": "^1.8.3",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.24",
+    "@types/node": "^22.5.4",
+    "@vitest/coverage-istanbul": "^2.0.5",
+    "type-fest": "^4.26.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.3",
+    "vite-plugin-dts": "^4.2.1",
+    "vitest": "^2.0.5"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.4.1"
 }
