--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,16 +24,11 @@ jobs:
           node-version: 20
       - name: '📦 Install Packages'
         run: yarn install
-      - name: '🏗️ Build'
-        run: yarn build
-      - name: '🎨 Code Formatting'
-        run: yarn analyze:fmt
-      - name: '⚙️ Code Linting'
-        run: yarn analyze:lint
+      - name: '🕵️ Code Linting & Formatting'
+        run: yarn turbo analyze:ci
       - name: '🟦 Typecheck'
         run: yarn analyze:types
       - name: '⚡️ Test'
-        id: test
         run: yarn test
 
   dependabot:
