--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joggr/tempo",
-  "version": "0.9.2",
+  "version": "1.0.0",
   "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
   "exports": {
     ".": {
@@ -27,7 +27,9 @@
     "analyze": "biome check",
     "analyze:ci": "biome ci --diagnostic-level=error",
     "analyze:types": "tsc --noEmit",
-    "fix": "biome check --fix"
+    "fix": "biome check --fix",
+    "sync:linguist": "node ./scripts/sync-github-linguist.js",
+    "sync:emoji": "node ./scripts/sync-github-emoji.js"
   },
   "repository": {
     "type": "git",
@@ -45,9 +47,11 @@
     "@swc/core": "^1.7.24",
     "@types/node": "^22.5.4",
     "@vitest/coverage-istanbul": "^2.0.5",
+    "axios": "^1.7.7",
     "type-fest": "^4.26.1",
     "typescript": "^5.6.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "yaml": "^2.5.1"
   },
   "packageManager": "yarn@4.4.1"
 }
