--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,18 @@
 {
   "compilerOptions": {
-    "incremental": true,
-    "module": "commonjs",
+    "lib": ["ES2021"],
+    "module": "ESNext",
+    "noEmit": true,
     "strict": true,
-    "target": "ES2022",
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "emitDecoratorMetadata": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "declaration": true,
-    "removeComments": false,
-    "lib": ["ES2022"],
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "bundler",
+    "useDefineForClassFields": true,
+    "allowImportingTsExtensions": true,
     "outDir": "./dist",
     "baseUrl": "."
   },
-  "typeRoots": ["node_modules/@types", "types"],
-  "include": ["types/**/*", "src/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules/**/*", "**/__tests__/**/*", "action.js"]
 }
