--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,24 @@
   "search.exclude": {
     "**/.yarn": true,
     "**/.pnp.*": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#80026b",
+    "activityBar.background": "#80026b",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#000000",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#80026b",
+    "statusBar.background": "#4e0141",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#80026b",
+    "statusBarItem.remoteBackground": "#4e0141",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#4e0141",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#4e014199",
+    "titleBar.inactiveForeground": "#e7e7e799"
   }
 }
