--- a/.github/workflows/pkg-npm-publish.yaml
+++ b/.github/workflows/pkg-npm-publish.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   publish:
     name: 'Publish to GitHub npm Registry'
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
       - name: '🛒 Checkout Code'
