--- a/.github/workflows/pkg-npm-publish.yaml
+++ b/.github/workflows/pkg-npm-publish.yaml
@@ -7,7 +7,7 @@ on:
       version:
         description: 'Semantic Version'
         required: true
-        default: 'prerelease'
+        default: 'minor'
         type: choice
         options:
           - patch
