--- a/.github/workflows/pkg-npm-publish.yaml
+++ b/.github/workflows/pkg-npm-publish.yaml
@@ -60,7 +60,12 @@ jobs:
         run: yarn turbo run build --filter="./packages/*"
 
       - name: '🧶 Setup .yarnrc.yml'
-        run: 'yarn config set npmScopes.joggrdocs.npmAuthToken ${{ secrets.GH_BOT_TOKEN }}'
+        run: |
+          yarn config set npmScopes.joggr.npmRegistryServer "https://registry.npmjs.org"
+          yarn config set npmScopes.joggr.npmAlwaysAuth true
+          yarn config set npmScopes.joggr.npmAuthToken $NPM_AUTH_TOKEN
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
 
       - name: '🚢 Publish'
         run: yarn workspaces foreach -A --include "packages/*" npm publish --tolerate-republish --access restricted
