--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library used to programmatically build markdown documents, with a heavy tilt toward GitHub Flavored Markdown (GFM).",
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
     "generate:examples": "tsx examples/index.ts",
