--- a/packages/tempo/package.json
+++ b/packages/tempo/package.json
@@ -40,6 +40,8 @@
     "consola": "^3.4.0",
     "tsx": "^4.19.3",
     "type-fest": "^4.35.0",
+    "typedoc": "^0.27.9",
+    "typedoc-plugin-markdown": "^4.4.2",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   },
