--- a/packages/tempo/tsconfig.json
+++ b/packages/tempo/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "ES2021"
-    ],
+    "lib": ["ES2021"],
     "module": "ESNext",
     "noEmit": true,
     "strict": true,
@@ -15,19 +13,10 @@
     "outDir": "./dist",
     "baseUrl": "."
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules/**/*",
-    "**/__tests__/**/*",
-    "action.js"
-  ],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**/*", "**/__tests__/**/*", "action.js"],
   "typedocOptions": {
-    "entryPoints": [
-      "src/lib/tempo-document.ts",
-      "src/lib/tempo-text.ts",
-    ],
+    "entryPoints": ["src/lib/tempo-document.ts", "src/lib/tempo-text.ts"],
     "out": "docs"
   }
 }
