--- a/packages/tempo-md/package.json
+++ b/packages/tempo-md/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@joggr/tempo-md",
+  "version": "0.13.0",
   "description": "A package for handling markdown-related functionality in the Tempo ecosystem.",
   "repository": {
     "type": "git",
@@ -41,10 +42,8 @@
     "@rslib/core": "^0.5.5",
     "@types/node": "^22.13.13",
     "@vitest/coverage-istanbul": "^3.0.9",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
-  },
-  "dependencies": {
-    "marked": "^12.0.0"
+    "@vitest/coverage-v8": "3.0.9",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.9"
   }
 }
