⚙️ chore: Add GHA for slack notifications

--- a/.github/workflows/pkg-npm-publish.yaml
+++ b/.github/workflows/pkg-npm-publish.yaml
@@ -21,6 +21,13 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
+      - name: '🟪 Send Slack Notification - Start'
+        uses: joggrdocs/moonshot/.github/actions/notify@main
+        with:
+          stage: 'start'
+          slack_token: ${{ secrets.SLACK_RELEASE_BOT_TOKEN }}
+          environment: 'package'
+
       - name: '🛒 Checkout Code'
         uses: actions/checkout@v4
         with:
@@ -56,6 +63,13 @@ jobs:
             const pj = JSON.parse(fs.readFileSync('${{ github.workspace }}/package.json'));
             return pj.version;   
 
+      - name: '🟪 Send Slack Notification - Start'
+        uses: joggrdocs/moonshot/.github/actions/notify@main
+        with:
+          stage: 'build'
+          slack_token: ${{ secrets.SLACK_RELEASE_BOT_TOKEN }}
+          environment: 'package'
+
       - name: '🏗️ Build'
         run: yarn turbo run build --filter="./packages/*"
 
@@ -66,6 +80,13 @@ jobs:
           yarn config set npmScopes.joggr.npmAuthToken $NPM_AUTH_TOKEN
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
+
+      - name: '🟪 Send Slack Notification - Start'
+        uses: joggrdocs/moonshot/.github/actions/notify@main
+        with:
+          stage: 'deploying'
+          slack_token: ${{ secrets.SLACK_RELEASE_BOT_TOKEN }}
+          environment: 'package'
 
       - name: '🚢 Publish'
         run: yarn workspaces foreach -A --include "packages/*" npm publish --tolerate-republish --access public
@@ -85,3 +106,10 @@ jobs:
         with:
           version: v${{ steps.version.outputs.result }}
           publish: true
+
+      - name: '🟪 Send Slack Notification - Success'
+        uses: joggrdocs/moonshot/.github/actions/notify@main
+        with:
+          stage: 'deployed'
+          slack_token: ${{ secrets.SLACK_RELEASE_BOT_TOKEN }}
+          environment: 'package'
